default/objects/LongForm_Tariff__c/LongForm_Tariff__c.object-meta.xml
<CustomObject>
    <label>LongForm Tariff</label>
    <nameField>
        <label>LongForm Tariff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LongForm Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>