default/objects/LongForm_Tariff__c/fields/LongForm_Product__c.field-meta.xml
<CustomField>
    <fullName>LongForm_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LongForm Product</label>
    <referenceTo>LongForm_Product__c</referenceTo>
    <relationshipLabel>LongForm Tariffs</relationshipLabel>
    <relationshipName>LongForm_Tariffs</relationshipName>
    <type>Lookup</type>
</CustomField>