default/objects/LongForm_Tariff__c/fields/Show_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Show_Tariff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Tariff</label>
    <type>Checkbox</type>
</CustomField>