default/objects/LongForm_Tariff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>LongForm_Fleetcor_Product__c</columns>
    <columns>LongForm_Product__c</columns>
    <columns>Show_Tariff__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>